Changed cloud margins for smaller screens to avoid overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -90,13 +90,13 @@ p {
   display: block;
   position: absolute;
   margin-top: 10px;
-  right: 20rem;
+  right: 3rem;
 }
 
 .img_cloud_bottom {
   display: block;
   position: absolute;
-  left: 20rem;
+  left: 3rem;
 }
 
 .img_mountain {
